@@ -1,3 +1,5 @@
+HEAD
+    + Now config and cli vars are passed to the tests with the GLOBAL_ prefix
 0.11
     + Added anste-init command to create the directory structure of a project
     + Added python-anste wrapper for python-selenium
